# breakhack

./: .appveyor.yml  .clang_complete  .editorconfig  .gitignore  .gitmodules  .travis.yml  .vimrc  CMakeLists.txt  CODE_OF_CONDUCT.md  CREDITS.md  LICENSE.txt  LINUX_BUILD_INSTRUCTIONS.md  MSVC_BUILD_INSTRUCTIONS.md  Makefile  README.md  TODO.txt  bhack_raw.out  compile_commands.json  data.db
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-multi-platform.yml  code-ql.yml  codeql.yml
assets/Extras/: README.txt  controller.aseprite
bh_random/: CMakeLists.txt
bh_random/src/: bh_random.cpp  bh_random.h
build_deps/cmake/: FindSDL2.cmake  FindSDL2_ttf.cmake  git_version.cmake
build_deps/linux/: breakhack.run
build_deps/releasenotes/: early-access-v11.txt  early-access-v13.txt  v2.0.2.txt  v2.0.3.txt  v2.0.4.txt  v2.1.3.txt  v2.1.4.txt  v3.0.1.txt  v3.0.2.txt  v3.1.2.txt  v4.0.2.txt  v4.0.3.txt
build_deps/scripts/: release_patch_version.sh  setup_env.sh
build_deps/toolchains/: mingw-w64-i686.cmake
checksum/: CMakeLists.txt
checksum/src/: checksum.c  checksum.h
data/: chestgen.lua  layoutparser.lua  mapgen.lua  maproombuilder.lua  menumapgen.lua  monstergen.lua  trapgen.lua
hashtable/: CMakeLists.txt  check_hashtable.c  hashtable.c  hashtable.h
lib/bh_random/: CMakeLists.txt
lib/bh_random/src/: bh_random.cpp  bh_random.h
lib/checksum/: CMakeLists.txt
lib/checksum/src/: checksum.c  checksum.h
lib/lua-5.3.5/: CMakeLists.txt
lib/physfs-3.0/: CMakeLists.txt
lib/sqlite3/: CMakeLists.txt
lib/steamworks_c_wrapper/: CMakeLists.txt
lib/steamworks_c_wrapper/cmake/: FindSTEAMWORKS.cmake
lib/steamworks_c_wrapper/src/: CSteamLeaderboard.cpp  CallbackHandler.cpp  CallbackHandler.h  steamworks_c_wrapper.cpp  steamworks_c_wrapper.h
linkedlist/: CMakeLists.txt  check_linkedlist.c  linkedlist.c  linkedlist.h
lua-5.3.5/: CMakeLists.txt
physfs-3.0/: CMakeLists.txt
physfs-3.0.1/: CMakeLists.txt
scripts/: build_steam_release.sh
src/: CMakeLists.txt  actiontext.c  actiontext.h  actiontextbuilder.c  actiontextbuilder.h  animation.c  animation.h  artifact.c  artifact.h  camera.c  camera.h  collisions.c  collisions.h  config.h.in  db.c  db.h  defines.h  dimension.h  doorlocktype.h  effect_util.c  effect_util.h  event.c  event.h  gamecontroller.c  gamecontroller.h  gamestate.h  globals.h  gui.c  gui.h  gui_button.c  gui_button.h  gui_util.c  gui_util.h  hashtable.c  hashtable.h  hiscore.c  hiscore.h  input.c  input.h  io_util.c  (+83 more)
src/steam/: steamworks_api_wrapper.c  steamworks_api_wrapper.h
steam/: steamworks_api_wrapper.c  steamworks_api_wrapper.h
steamworks_c_wrapper/: CMakeLists.txt
steamworks_c_wrapper/src/: CSteamLeaderboard.cpp  CSteamLeaderboard.h  CallbackHandler.cpp  CallbackHandler.h  steamworks_c_wrapper.cpp  steamworks_c_wrapper.h
test/: check_hashtable.c  check_linkedlist.c  check_util.c  test_hashtable.c  test_input.c  test_keyboardinput.c  test_linkedlist.c  test_pos_heap.c  test_util.c
